# Veea-English-Notes

./: .gitignore  README.md  pubspec.yaml
cloud/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
cloud/.github/: copilot-instructions.md
cloud/.github/instructions/: rust-domain.instructions.md  rust-http.instructions.md  rust-infrastructure.instructions.md  rust-testing.instructions.md  sql-migrations.instructions.md
cloud/.github/workflows/: ci.yml
cloud/migrations/: 20250101000001_create_users.sql  20250101000002_create_refresh_tokens.sql  20250101000003_create_outbox_events.sql  20250101000004_create_inbox_messages.sql  20250101000005_create_idempotency_records.sql  20250101000006_create_vocabulary_words.sql  20250101000007_add_phonetic_to_vocabulary.sql
cloud/src/: lib.rs  main.rs
cloud/src/application/identity/: mod.rs  transaction.rs
cloud/src/application/identity/commands/: change_user_role.rs  login_user.rs  mod.rs  refresh_access_token.rs  register_user.rs  revoke_refresh_token.rs
cloud/src/application/identity/dto/: auth_dto.rs  user_dto.rs
cloud/src/application/identity/ports/: cache_service.rs  clock.rs  event_bus.rs  id_generator.rs  jwt_service.rs  mod.rs  password_hasher.rs
cloud/src/application/identity/queries/: get_my_profile.rs  list_users.rs  mod.rs
cloud/src/application/vocabulary/commands/: apply_review.rs  create_word.rs  delete_word.rs  (+3 more)
cloud/src/bootstrap/: app_state.rs  config.rs  database.rs  logger.rs  messaging.rs  mod.rs  redis.rs  telemetry.rs
cloud/src/common/: auth_context.rs  constants.rs  correlation.rs  error.rs  idempotency.rs  mod.rs  pagination.rs  request_id.rs  result.rs  time.rs  traits.rs
cloud/src/domain/: mod.rs
cloud/src/domain/identity/: errors.rs  mod.rs
cloud/src/infrastructure/: mod.rs
cloud/src/infrastructure/cache/: mod.rs  redis_cache.rs
cloud/src/infrastructure/idempotency/: mod.rs  postgres_idempotency_store.rs
cloud/src/infrastructure/messaging/: consumer_runtime.rs  event_bus.rs  kafka_bus.rs  message_envelope.rs  mod.rs  nats_bus.rs  outbox_dispatcher.rs  topics.rs
cloud/src/infrastructure/observability/: health.rs  metrics.rs  mod.rs  tracing.rs
cloud/src/infrastructure/security/: argon2_password_hasher.rs  jwt_service_impl.rs  mod.rs
cloud/src/interfaces/http/: mod.rs  openapi.rs  response.rs  router.rs
cloud/src/workers/: consumer_worker.rs  mod.rs  outbox_worker.rs
(+85 files in other folders)
