[package]
name = "english-notes-cloud"
version = "0.1.0"
edition = "2024"
default-run = "english-notes-cloud"
license = "MIT"
publish = false

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
    "cors",
    "compression-gzip",
    "timeout",
    "request-id",
    "limit",
    "trace",
    "catch-panic",
] }
hyper = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Messaging — NATS
async-nats = "0.38"

# Messaging — Kafka
rdkafka = { version = "0.37", features = ["cmake-build", "ssl-vendored"], optional = true }

# Security
jsonwebtoken = "9"
argon2 = "0.5"
password-hash = "0.5"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "fmt",
] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.27"

# Utilities
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
config = { version = "0.14", features = ["toml"] }
secrecy = { version = "0.10", features = ["serde"] }
validator = { version = "0.19", features = ["derive"] }
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
once_cell = "1"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
wiremock = "0.6"
fake = { version = "3", features = ["derive", "chrono", "uuid"] }
claim = "0.5"

[features]
default = ["nats"]
nats = []
kafka = ["dep:rdkafka"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
